<resources>
    <string name="app_name">Eco Ven</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="don_t_have_an_account_signp">Don\'t have an account? Signp</string>
    <string name="continue_with_social_media_account">Continue with social media account</string>
    <string name="let_s_start_with_n_login">Let\'s start with\n Login!</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="mobile">Your Transport Card Number</string>
    <string name="transport_card_number">Your Transport Card Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="save">Save</string>
    <string name="to_enter_the_ranking_again_you_must_n_contact_admin">To enter the ranking again you must\n contact admin</string>
    <string name="creaate_acc">Create Account</string>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="_15_discount">15% Discount</string>
    <string name="This_ticket_is">\u2022 This ticket is not cumulative with\n another discount or promotion</string>

    <string name="go_to_board">Go to Board</string>
    <string name="activate_your_code">Activate your code</string>
    <string name="scan">Scan</string>
    <string name="msg_noInternet">Internet Connection Not Available</string>
    <string name="on_error">On error</string>

    <string name="permisson_denied">Permission denied</string>
    <string name="permission_denied_boo"> permission denied, boo! Disable the functionality that depends on this permission.</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_name">Enter name.</string>
    <string name="enter_email">Enter Email.</string>
    <string name="enter_valid_email">Enter Valid Email.</string>
    <string name="please_enter_pass">Enter Password</string>
    <string name="please_enter_confirm_pass">Please enter Confirm password.</string>
    <string name="pass_and_confirm_pass_not_macthed">Password and confirm password is not matched.</string>
    <string name="enter_mobile_number">Enter Mobile Number.</string>
    <string name="enter_card_number">Enter Card  Number.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="your_email">Your email</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="enter_your_email_and_will_send_nyou_instructions_on_how_to_reset_it">Enter your email and will send\nyou instructions on how to reset it</string>
    <string name="send">Send</string>
    <string name="phone_number">Phone Number</string>
    <string name="appear_in_green_footprint">Appear in green footprint?</string>
    <string name="select_country">Select Country</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="select_language">Select Language</string>
    <string name="logged_in_successfull">Logged in successfully</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="please_enter_old_pass">Please enter old password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_mismatched">Please make sure your password match.</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="your_new_password">Your New Password</string>
    <string name="dot">\u2022  </string>
    <string name="schedule">Schedule</string>
    <string name="machine_a">Machine </string>
    <string name="monday_to_friday">Monday to Friday:  </string>
    <string name="km_away"> km away</string>
    <string name="close">Close</string>
    <string name="change_language">Change Language</string>
    <string name="signout">Signout</string>
    <string name="board">Board</string>
    <string name="my_tickets">My Tickets</string>
    <string name="ecosocious">Ecosocious</string>
    <string name="contact_us">Contact Us</string>
    <string name="news">News</string>
    <string name="done">Done</string>
    <string name="search_product">Search Product</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="please_enter_description">Please enter description</string>

</resources>