<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_above="@id/tvSignup"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignupAct"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_start_with_n_login"
            android:textSize="@dimen/_22sdp"
            android:textColor="@color/green"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginTop="@dimen/_5sdp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/green"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:backgroundTint="@color/green"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_12sdp"
                android:backgroundTint="@color/green"
                android:textColor="@color/green"
                android:imeOptions="actionDone"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/montserrat_semibold"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_30sdp"
            android:textSize="@dimen/_12sdp"
            />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/green"
            android:layout_gravity="end"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginTop="@dimen/_8sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_social_media_account"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_20sdp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:cardBackgroundColor="#3280ee"
            app:cardPreventCornerOverlap="true"
            app:cardMaxElevation="5dp"
            android:clickable="true"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardElevation="5dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:id="@+id/rls_facbook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fb" />

                <TextView
                    android:id="@+id/btnFacebookSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/login_with_facebook"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_signp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            />
    </RelativeLayout>
</layout>